--- a/Day_1/python.ipynb
+++ b/Day_1/python.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Science With Python \n",
+    "#### In first day, We will learn about array, list, touple, set, etc...."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -16,6 +24,11 @@
    "source": [
     "print(\"Happy Holi\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
