adding data types in python

--- a/Day_1/python.ipynb
+++ b/Day_1/python.ipynb
@@ -28,7 +28,76 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# # # Data Types In Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is Janak Singh Dhami\n",
+      "data type of name is <class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# this is a string data type in python\n",
+    "# string means, a sequence of characters\n",
+    "name = \"Janak Singh Dhami\"\n",
+    "print(\"My name is\", name)\n",
+    "print(\"data type of name is\", type(name))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My age is : 21\n",
+      "data type of age is <class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# this is a integer data type in python\n",
+    "# integer means, whole number\n",
+    "age = 21\n",
+    "print(\"My age is :\", age)\n",
+    "print(\"data type of age is\", type(age))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My height is : 5.11\n",
+      "data type of height is <class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# this is a float data type in python\n",
+    "#  float means, decimal number\n",
+    "height = 5.11\n",
+    "print(\"My height is :\", height)\n",
+    "print(\"data type of height is\", type(height))"
+   ]
   }
  ],
  "metadata": {
