adding the primative data types

--- a/Day_1/python.ipynb
+++ b/Day_1/python.ipynb
@@ -5,6 +5,7 @@
    "metadata": {},
    "source": [
     "## Data Science With Python \n",
+    "## Day_1\n",
     "#### In first day, We will learn about array, list, touple, set, etc...."
    ]
   },
@@ -29,7 +30,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# # # Data Types In Python"
+    "### Data Types In Python\n",
+    "#####  Premative Data Types\n",
+    "- integer\n",
+    "- string\n",
+    "- boolean\n",
+    "- float\n",
+    "- complex\n"
    ]
   },
   {
@@ -97,6 +104,75 @@
     "height = 5.11\n",
     "print(\"My height is :\", height)\n",
     "print(\"data type of height is\", type(height))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am student : True\n",
+      "data type of is_student is: <class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# this is a boolean data type in python\n",
+    "# boolean means, True or False\n",
+    "is_student = True\n",
+    "print(\"I am student :\", is_student)\n",
+    "print(\"data type of is_student is:\", type(is_student))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "complex number is : (5+3j)\n",
+      "data type of c is: <class 'complex'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# this is a complex data type in python\n",
+    "# complex means, a number with real and imaginary part\n",
+    "c = 5 + 3j\n",
+    "print(\"complex number is :\", c)\n",
+    "print(\"data type of c is:\", type(c))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "65\n",
+      "9\n",
+      "0.6021844548015101\n"
+     ]
+    }
+   ],
+   "source": [
+    "# this is random module in python\n",
+    "#  modeule is a file containing python code\n",
+    "#  module can define functions, classes and variables\n",
+    "import random\n",
+    "print(random.randint(1, 100)) # this will print random number between 1 and 100\n",
+    "print(random.randrange(1, 10)) # this will print random number between 1 and 10\n",
+    "print(random.random()) # this will print random number between 0 and 1"
    ]
   }
  ],
