--- a/physics/maxpower.ipynb
+++ b/physics/maxpower.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "metadata": {}
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "metadata": {}
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "metadata": {}
    },
@@ -62,7 +62,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Maximum power from V and R: 0.05819\n"
+      "Maximum power from V and R: 0.05819\n",
+      "Maximum Resistance: 110\n"
      ]
     }
    ],
@@ -71,12 +72,12 @@
     "\n",
     "plt.plot(data['R'], data['P1'], label='P1')\n",
     "# draw also horizontal line\n",
-    "max_power1 = data['P1'].max()\n",
-    "plt.axhline(y=max_power1, color='g', linestyle='--')\n",
+    "max_power = data['P1'].max()\n",
+    "plt.axhline(y=max_power, color='g', linestyle='--')\n",
     "\n",
     "# draw max line in graph, take value when P2 is max\n",
-    "max_power2 = data['R'][data['P1'].idxmax()]\n",
-    "plt.axvline(x=max_power2, color='r', linestyle='--')\n",
+    "max_resistance = data['R'][data['P1'].idxmax()]\n",
+    "plt.axvline(x=max_resistance, color='r', linestyle='--')\n",
     "# labelling\n",
     "plt.xlabel('Resistance-R')\n",
     "plt.ylabel('Power By Using I and R')\n",
@@ -87,12 +88,13 @@
     "\n",
     "# Maximum power from P1\n",
     "max_power1 = data['P1'].max()\n",
-    "print('Maximum power from V and R:', max_power1)"
+    "print('Maximum power from V and R:', max_power)\n",
+    "print(\"Maximum Resistance:\", max_resistance)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {
     "metadata": {}
    },
@@ -111,7 +113,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Maximum power from I and R: 0.069283962\n"
+      "Maximum power from I and R: 0.069283962\n",
+      "Maximum Resistance: 106\n"
      ]
     }
    ],
@@ -121,12 +124,12 @@
     "plt.plot(data['R'], data['P2'], label='P2')\n",
     "\n",
     "# draw also horizontal line\n",
-    "max_power1 = data['P2'].max()\n",
-    "plt.axhline(y=max_power1, color='g', linestyle='--')\n",
+    "max_power = data['P2'].max()\n",
+    "plt.axhline(y=max_power, color='g', linestyle='--')\n",
     "\n",
     "# draw max line in graph, take value when P2 is max\n",
-    "max_power2 = data['R'][data['P2'].idxmax()]\n",
-    "plt.axvline(x=max_power2, color='r', linestyle='--')\n",
+    "max_resistance = data['R'][data['P2'].idxmax()]\n",
+    "plt.axvline(x=max_resistance, color='r', linestyle='--')\n",
     "\n",
     "# labelling\n",
     "plt.xlabel('Resistance-R')\n",
@@ -138,14 +141,8 @@
     "\n",
     "# maximum power from P2\n",
     "max_power2 = data['P2'].max()\n",
-    "print('Maximum power from I and R:', max_power2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Thank You for Watching.........."
+    "print('Maximum power from I and R:', max_power)\n",
+    "print(\"Maximum Resistance:\", max_resistance)\n"
    ]
   }
  ],
