adding some mistakes

--- a/libraries/numpy.ipynb
+++ b/libraries/numpy.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Learn NumPy with Scratch "
+    "# Learn NumPy from Scratch "
    ]
   },
   {
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "# What is Numpy?\n",
-    "# Numpy is a python library used for working with arrays. It also has functions for working in domain of linear algebra, fourier transform, and matrices. Numpy was created in 2005 by Travis Olliphant. It is an open source project and you can use it freely. Numpy stands for Numerical Python.\n",
+    "- Numpy is a python library used for working with arrays. It also has functions for working in domain of linear algebra, fourier transform, and matrices. Numpy was created in 2005 by Travis Olliphant. It is an open source project and you can use it freely. Numpy stands for Numerical Python.\n",
     "\n",
     "# Why Numpy?\n",
     "- In Python we have lists that serve the purpose of arrays, but they are slow to process. Numpy aims to provide an array object that is up to 50x faster than traditional Python lists. The array object in Numpy is called ndarray, it provides a lot of supporting functions that make working with ndarray very easy. Arrays are very frequently used in data science, where speed and resources are very important.\n",
